--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1 {
+        @apply text-4xl font-bold mb-3;
+    }
+    h2 {
+        @apply text-2xl font-semibold mb-2;
+    }
+    h3 {
+        @apply text-xl font-semibold mb-1;
+    }
+    p a {
+        @apply underline text-blue-800
+    }
+}
