--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,6 +13,6 @@
         @apply text-xl font-semibold mb-1;
     }
     p a {
-        @apply underline text-blue-800
+        @apply underline text-blue-800 hover:text-blue-600 transition-colors;
     }
 }
