--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,7 @@
 
 @layer base {
     h1 {
-        @apply text-4xl font-bold mb-3;
+        @apply text-4xl font-bold mb-3 tracking-tight;
     }
     h2 {
         @apply text-2xl font-semibold mb-2;
